@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.3082
+//     Runtime Version:2.0.50727.3053
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -21,9 +21,7 @@ namespace MySql.Data.MySqlClient.Properties {
     // with the /str option, or rebuild your VS project.
     [global::System.CodeDom.Compiler.GeneratedCodeAttribute("System.Resources.Tools.StronglyTypedResourceBuilder", "2.0.0.0")]
     [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
-#if !CF
     [global::System.Runtime.CompilerServices.CompilerGeneratedAttribute()]
-#endif
     public class Resources {
         
         private static global::System.Resources.ResourceManager resourceMan;
@@ -230,6 +228,15 @@ namespace MySql.Data.MySqlClient.Properties {
         public static string DataReaderOpen {
             get {
                 return ResourceManager.GetString("DataReaderOpen", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to The default connection encoding was not found. Please report this as a bug along with your connection string and system details..
+        /// </summary>
+        public static string DefaultEncodingNotFound {
+            get {
+                return ResourceManager.GetString("DefaultEncodingNotFound", resourceCulture);
             }
         }
         
